--- a/app/src/main/res/layout/produtos_list.xml
+++ b/app/src/main/res/layout/produtos_list.xml
@@ -1,7 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
                                                    android:orientation="vertical"
                                                    android:layout_width="match_parent"
-                                                   android:layout_height="match_parent" android:id="@+id/linearLayout2">
+                                                   android:layout_height="wrap_content" android:id="@+id/linearLayout2">
 
+    <ImageView
+            android:layout_width="132dp"
+            android:layout_height="153dp" app:srcCompat="@drawable/no_img"
+            android:id="@+id/imagemProduto" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/nomeProduto" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toEndOf="@+id/imagemProduto" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:layout_marginTop="32dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/descricaoProduto" app:layout_constraintStart_toEndOf="@+id/imagemProduto"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/nomeProduto" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="24dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
