--- a/app/src/main/res/layout/content_vendedor.xml
+++ b/app/src/main/res/layout/content_vendedor.xml
@@ -11,9 +11,42 @@
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="0dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/recyclerProdutosVendedor"/>
+            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/recyclerProdutosVendedor"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/fotoVendedor"/>
+    <ImageView
+            android:layout_width="145dp"
+            android:layout_height="145dp" app:srcCompat="@drawable/no_photo"
+            android:id="@+id/fotoVendedor" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/vendedorNick" app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
+            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/nomeVendedor"
+            app:layout_constraintTop_toBottomOf="@+id/vendedorNick" app:layout_constraintStart_toEndOf="@+id/fotoVendedor"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="4dp"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/notaVendedor"
+            app:layout_constraintTop_toBottomOf="@+id/nomeVendedor"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
+            app:layout_constraintStart_toEndOf="@+id/fotoVendedor" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
