--- a/app/src/main/res/layout/produtos_vendedor.xml
+++ b/app/src/main/res/layout/produtos_vendedor.xml
@@ -25,14 +25,13 @@
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
     <TextView
             android:text="TextView"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/descricaoProdutoVendedor"
-            app:layout_constraintTop_toBottomOf="@+id/nomeProdutoVendedor"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cmmComprador" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="2dp"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -40,7 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/descricaoProdutoVendedor"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="TextView"/>
+            android:text="TextView" android:layout_marginTop="2dp"/>
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
@@ -52,4 +51,22 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp" android:layout_marginTop="4dp"/>
+    <View
+            android:id="@+id/divider3"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="?android:attr/listDivider"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/vendido" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
+    <TextView
+            android:text="Comentário do Comprador: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cmmComprador"
+            app:layout_constraintTop_toBottomOf="@+id/nomeProdutoVendedor"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
