--- a/app/src/main/res/layout/produtos_vendedor.xml
+++ b/app/src/main/res/layout/produtos_vendedor.xml
@@ -52,7 +52,7 @@
             android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp" android:layout_marginTop="4dp"/>
     <View
-            android:id="@+id/divider3"
+            android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="2dp"
             android:background="?android:attr/listDivider"
