--- a/app/src/main/res/layout/produtos_list.xml
+++ b/app/src/main/res/layout/produtos_list.xml
@@ -12,14 +12,20 @@
             android:id="@+id/imagemProduto" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+
     <TextView
-            android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/nomeProduto" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintStart_toEndOf="@+id/imagemProduto" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" android:layout_marginTop="32dp"/>
+        android:id="@+id/nomeProduto"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imagemProduto"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
             android:text="TextView"
             android:layout_width="0dp"
