--- a/app/src/main/res/layout/produtos_vendedor.xml
+++ b/app/src/main/res/layout/produtos_vendedor.xml
@@ -46,7 +46,7 @@
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/notaVenda"
+            android:id="@+id/notaVendaProduto"
             app:layout_constraintTop_toBottomOf="@+id/descricaoProdutoVendedor"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
@@ -58,7 +58,7 @@
             android:id="@+id/vendido"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/notaVenda"
+            app:layout_constraintTop_toBottomOf="@+id/notaVendaProduto"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp" android:layout_marginTop="4dp"/>
